tests/custom/STARIS_2022/operation-type-errors/sum-type-error-01/stderr.expected
Error:
    sum-type-error.essence:2:19:
  |
2 | such that i = sum(5)
  |                   ^
Type error:
	Expected: "Matrix or Set"
	Got: int

